Update URLs to mememinter.vercel.app and update account association

--- a/index.html
+++ b/index.html
@@ -12,14 +12,23 @@
 
 
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://basedmeme.vercel.app/og.png" />
+  <meta property="og:image" content="https://mememinter.vercel.app/og.png" />
   <meta name="base:app_id" content="69394555e6be54f5ed71d4fd" />
-  <meta name="fc:miniapp"
-    content='{"version": "next", "imageUrl": "https://basedmeme.vercel.app/og.png", "button": {"title": "Make Memes", "action": {"type": "launch_frame", "name": "Based Meme Maker", "url": "https://basedmeme.vercel.app", "splashImageUrl": "https://basedmeme.vercel.app/splash.png", "splashBackgroundColor": "#0A0E1A"}}}' />
+  <!-- Farcaster Frames -->
+  <meta property="fc:frame" content="vNext" />
+  <meta property="fc:frame:image" content="https://mememinter.vercel.app/og.png" />
+  <meta property="fc:frame:button:1" content="Make Memes" />
+  <meta property="fc:frame:button:1:action" content="link" />
+  <meta property="fc:frame:button:1:target" content="https://mememinter.vercel.app/" />
 
+  <!-- Mini App -->
+  <meta name="fc:miniapp"
+    content='{"version": "next", "imageUrl": "https://mememinter.vercel.app/og.png", "button": {"title": "Make Memes", "action": {"type": "launch_frame", "name": "Based Meme Maker", "url": "https://mememinter.vercel.app", "splashImageUrl": "https://mememinter.vercel.app/splash.png", "splashBackgroundColor": "#0A0E1A"}}}' />
+
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@hotpunk" />
-  <meta name="twitter:image" content="https://basedmeme.vercel.app/og.png" />
+  <meta name="twitter:image" content="https://mememinter.vercel.app/og.png" />
 
 
 
