--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Based Meme Maker</title>
   <meta name="description"
     content="Your gateway to Based memes. Simple and minimalistic meme maker with custom text and colors.">
-  <meta name="author" content="Lovable" />
+  <meta name="author" content="Hotpunk" />
 
 
 
