--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Slackey&display=swap"
+    rel="stylesheet">
   <title>Based Meme Maker</title>
   <meta name="description"
     content="Your gateway to Based memes. Simple and minimalistic meme maker with custom text and colors.">
